training and evaluation; package installation; cli. (#48)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,35 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "moge"
+version = "1.0.0"
 description = "MoGe: Unlocking Accurate Monocular Geometry Estimation for Open-Domain Images with Optimal Training Supervision"
-version = "0.1"
+readme = "README.md"
+license = {text = "MIT"}
 dependencies = [
-    'numpy<2.0',
-    'click>=8.1.7',
-    'torch>=2.0',
-    'torchvision>=0.15',
-    'opencv-python>=4.10.0.84',
-    'scipy>=1.14.1',
-    'trimesh>=4.5.1',
-    'matplotlib>=3.9.2',
-    'pillow>=10.4.0',
-    'huggingface_hub>=0.25.2',
+    "click",
+    "opencv-python",
+    "scipy",
+    "matplotlib",
+    "trimesh",
+    "pillow",
+    "huggingface_hub",
+    "numpy",
+    "torch>=2.0.0",
+    "torchvision",
+    "gradio",
+    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@3913c65d81e05e47b9f367250cf8c0f7462a0900"
 ]
+requires-python = ">=3.9"
 
-[tool.setuptools.packages]
-find = {}
+[project.urls]
+Homepage = "https://github.com/microsoft/MoGe"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["moge*"]
+
+[project.scripts]
+moge = "moge.scripts.cli:main"
