--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 # The versions are not specified since MoGe should be compatible with most versions of the packages. 
 # If incompatibilities are found, consider upgrading to latest versions or installing the following recommended version of the package.
+torch           # >= 2.0.0
+torchvision
+gradio          # ==2.8.13
 click           # ==8.1.7
 opencv-python   # ==4.10.0.84
 scipy           # ==1.14.1
